junit tests additons